project components screen UI fixes

--- a/application/clients/desktop/src/app/navigation/footer/footer.component.html
+++ b/application/clients/desktop/src/app/navigation/footer/footer.component.html
@@ -40,38 +40,38 @@
         </div>
         <div class="col-lg-6">
             <div class="row nav-list">
-              <div class="col-lg-3 ">
+              <div class="col-lg-4 ">
                   <div class="div_border">
                       <br/>
                 <p class="ispoint"><a>About</a></p>
                 </div>
               </div>
-              <div class="col-lg-3">
+              <div class="col-lg-4">
                   <div class="div_border">
                       <br/>
                 <p class="ispoint"><a>Projects</a></p>
                 </div>
               </div>
-              <div class="col-lg-2">
+              <!-- <div class="col-lg-2">
               <div class="div_border">
                 <br/>
                 <p class="ispoint"><a>Blog</a></p>
               </div>
-            </div>
+            </div> -->
     
-              <div class="col-lg-2">
+              <div class="col-lg-4">
                   <div class="div_border">
                       <br/>
                 <p class="ispoint"><a>Contacts</a></p>
                 </div>
               </div>
-              <div class="col-lg-2">
+              <!-- <div class="col-lg-2">
                   <div class="div_border">
                       <br/>
                 <p class="ispoint"><a>Pricing</a></p>
                 </div>
               </div>
-    
+     -->
             </div>
           </div>
       </div>
