--- a/application/clients/desktop/src/app/project-component/project-component.component.html
+++ b/application/clients/desktop/src/app/project-component/project-component.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container top_align">
     <br />
     <h1 style="text-align: center;">Project Components</h1>
     <div class='code'>
