--- a/generator/services/seed/Login/login.component.scss
+++ b/generator/services/seed/Login/login.component.scss
@@ -1,87 +1,55 @@
-// .cardsize {
-//   max-width: 43em;
-//   text-align: center;
-//   height: 30em;
-//   left: 45em;
-//   margin-top: -2em;
-//   padding-left: 6em;
-//   padding-right: 5em;
-//   margin-bottom: 9em;
-//   background: grey;
-// }
-
-
-.name {
-  text-align: center;
-  padding-top: 5em !important;
-}
-
-.password {
-  text-align: center;
-}
-
-.loginname {
-  margin-top: 2em;
-  text-align: center;
-}
-
-.imagealign {
-  margin-left: 13em;
-}
-
-input[pw-show-hide]+span {
-  cursor: pointer;
-  display: inline-block;
-  margin-left: .5ch;
-  text-transform: uppercase;
-  width: 4.5ch;
-  text-align: left;
-  line-height: 1;
-  vertical-align: middle;
-
-  small {
-    font-size: .7em;
-    opacity: .5;
-  }
-}
-
-// boring
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
 body {
-  margin: 0;
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: sans-serif;
-  font-size: calc(1em + 1.5vmin)
+  padding-top: 15px;
+  font-size: 12px
 }
-
-input {
-  font: inherit;
-  padding: .5ch;
-  border-radius: .4ch;
-  border: 2px solid #999;
+.main {
+  max-width: 320px;
+  margin: 0 auto;
 }
-
-body {
-  padding: 100px 0;
-  background-color: #efefef
+.login-or {
+  position: relative;
+  font-size: 18px;
+  color: #aaa;
+  margin-top: 10px;
+          margin-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-
-a,
-a:hover {
-  color: #333
+.span-or {
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: -2px;
+  margin-left: -25px;
+  background-color: #fff;
+  width: 50px;
+  text-align: center;
 }
-
-.eye {
-  position: absolute !important;
-  margin: -9px !important;
-  margin-left: -31px !important;
-  margin-top: 4px !important;
+.hr-or {
+  background-color: #cdcdcd;
+  height: 1px;
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+}
+h3 {
+  text-align: center;
+  line-height: 300%;
+}
+.card{
+box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+-webkit-transition: 0.3s;
+transition: 0.3s;
+height: 510px;
+margin-top: 8%;
+padding-top: 20px;
+border-radius: 19px;
+border: 2px solid #d5dbe0;
+}
+.login{
+margin-left: 40%
+}
+.hide-eye{
+float: right;
+margin-top: -8%;
+margin-right: 4%;
 }
