menu builder UI fixes

--- a/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
+++ b/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
@@ -7,7 +7,7 @@
   <div style="padding-right: 20px;">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 div_width">
           <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <h6>Language:</h6>
             <mat-form-field>
@@ -20,7 +20,7 @@
             </mat-form-field>
           </div>
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 div_width">
           <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
             <div class="form-group">
               <label for="name">Name</label>
@@ -30,7 +30,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 div_width">
           <app-tree-drag></app-tree-drag>
           <!-- <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <h6>Screen</h6>
@@ -44,7 +44,7 @@
             </mat-form-field>
           </div> -->
         </div>
-        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
+        <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6 div_width">
           <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <div class="form-group">
               <label for="name">Description</label>
