--- a/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.scss
+++ b/application/clients/desktop/src/app/techarchitecture-manager/techarchitecture-manager.component.scss
@@ -26,3 +26,9 @@ modal {
     text-align: center;
     padding-top: 2%;
 }
+.techDropdown{
+    max-width: 30.333333%;
+}
+.col-header{
+    max-width: 30.333333%;
+}
