--- a/application/clients/desktop/src/styles.scss
+++ b/application/clients/desktop/src/styles.scss
@@ -60,26 +60,17 @@
 @import "assets/scss/_mixins.scss";
 @import "assets/scss/_geppetto.scss";
 
-html {
-  height: 100%;
-  box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-body {
-  position: absolute;
-  margin: 0;
-  min-height: 100%;
-  width: 100%;
-}
 .modal-footer {
   justify-content: center;
 }
 .modal-footer .btn+.btn {
  margin-bottom: auto; 
+}
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 170px;
 }
