primary language selection

--- a/application/clients/desktop/src/app/login/login.component.scss
+++ b/application/clients/desktop/src/app/login/login.component.scss
@@ -100,3 +100,15 @@ a:hover {
 .pading_top{
   padding-top:1%;
 }
+.field_size{
+  margin: 2% 11% 4% 11%;
+}
+.eye {
+  position: relative !important;
+  top: -34px !important;
+  left: 48% !important;
+}
+.center{
+  text-align: center;
+  height: 40px;
+}
