--- a/application/clients/desktop/src/styles.scss
+++ b/application/clients/desktop/src/styles.scss
@@ -75,3 +75,8 @@ body {
   margin-bottom:0px;
   overflow-x: hidden;
 }
+
+app-projects .container .sitecard {
+  height: 300px;
+  margin-bottom: 10%;
+}
