--- a/application/clients/desktop/src/app/login/login.component.html
+++ b/application/clients/desktop/src/app/login/login.component.html
@@ -6,7 +6,7 @@
                 <img mat-card-image src="../../assets/GeppettoIcon.png">
             </div>
         </mat-card-header>
-        <mat-form-field class="loginname" appearance="outline">
+        <!-- <mat-form-field class="loginname" appearance="outline">
             <mat-label>Email Id</mat-label>
             <input matInput type="text" [(ngModel)]='user.email'>
         </mat-form-field>
@@ -18,21 +18,42 @@
             <span class="input-group-addon eye">
                 <i class="fa fa-eye-slash" aria-hidden="true" (click)="hideEye()"></i>
             </span>
-        </mat-form-field>
+        </mat-form-field> -->
+
+        <form [formGroup]="loginform">
+            <div class="form-group field_size">
+              <label class="text">Email</label>
+              <input type="email" class="form-control center" [(ngModel)]='user.email' name='user' [ngStyle]="{'border-color': borderStyle.email}" formControlName="email" id="email"
+              aria-describedby="email" placeholder="Email"
+              [ngClass]="{ 'is-invalid': submitted && f.email.errors }" >
+              <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+              </div>
+            </div>
+            <div class="form-group field_size">
+              <label class="text">Password</label>
+              <input type="password" class="form-control center" id="exampleInputPassword1" formControlName="password" placeholder="Password" name='user'
+              [type]="show ? 'text' : 'password'" pw-show-hide="icon" [(ngModel)]='user.password' (keyup.enter)="Login(user)" [ngStyle]="{'border-color': borderStyle.password}">
+
+              <span class="input-group-addon eye">
+                <i  [ngClass]= "show ? 'fa fa-eye' : 'fa fa-eye-slash'"  aria-hidden="true" (click)="hideEye()"></i>
+            </span>
+            </div>
+          </form>
     
-        <br>
-        <mat-checkbox class="example-margin" (change)="newuser($event,check)" [(ngModel)]="isChecked">New User</mat-checkbox>
+        <mat-checkbox class="example-margin" (change)="newuser($event,check)" [(ngModel)]="isChecked" >New User</mat-checkbox>
+        <div  style="color:red; text-align: center" *ngIf="new_user">Please Enter email and Password</div>
         <br>
         <mat-card-actions>
             <div>
-                <button mat-raised-button (click)='Login(user)' color="primary">Login!</button>
+                <button mat-raised-button (click)='Login(user)' color="primary">Login</button>
                 <div style="color:red; text-align: center">
                     {{errormessage}}
                 </div>
             </div>
             <br/>
             <div>
-                <button mat-raised-button (click)='googlesigin("google")' color="primary">Google Signin!</button>
+                <button mat-raised-button (click)='googlesigin("google")' color="primary">Google Signin</button>
             </div>
     
             <!-- <button mat-raised-button (click)='facebooksigin("facebook")' color="primary">Facebook Signin!</button> -->
@@ -44,9 +65,9 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h5 class="modal-title">User details</h5>
-                            <button type="button" class="close" data-dismiss="modal" (click)="closeDeleteFModel()" aria-label="Close">
+                            <!-- <button type="button" class="close" data-dismiss="modal" (click)="closeDeleteFModel()" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
-                            </button>
+                            </button> -->
                         </div>
                         <div class="modal-body">
                             <!-- Default input -->
