--- a/application/clients/desktop/src/app/navigation/footer/footer.component.html
+++ b/application/clients/desktop/src/app/navigation/footer/footer.component.html
@@ -2,96 +2,97 @@
 <footer class="section footer-classic context-dark bg-image mainDiv">
   <div class="container_new">
     <div class="row top_align">
-      <div class='col-lg-6 div_right_border'>
-          <h5>Contacts</h5>
-      </div>
-      <div class='col-lg-6'>
-          <h5>Links</h5>
-      </div>
-    </div>
-    <hr>
-   
-      <div class="row">
-        <div class="col-lg-2 ">
-          <div class="div_border">
+      <div class='col-lg-6 div_right_border col-md-12 col-sm-12 medium_device'>
+        <h5>Contacts</h5>
+        <hr/>
+        <div class="row">
+          <div class="col-lg-4 col-md-4 col-sm-6 ">
+            <div class="div_border">
               <dt>Address:</dt>
               <dl class="contact-list">
-              <dd>798 South Park Avenue, Orlando</dd>
-            </dl>
+                <dd>798 South Park Avenue, Orlando</dd>
+              </dl>
+            </div>
+
           </div>
-            
-        </div>
-        <div class="col-lg-2">
+          <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="div_border">
-            <dt>email:</dt>
-            <dl class="contact-list">             
+              <dt>email:</dt>
+              <dl class="contact-list">
                 <dd><a href="mailto:#">dan.castillo@geppettosoftware.com</a></dd>
               </dl>
-              </div>
-        </div>
-        <div class="col-lg-2">
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="div_border">
-            <dt>phone:</dt>
-            <dl class="contact-list"> 
+              <dt>phone:</dt>
+              <dl class="contact-list">
                 <dd><a href="tel:#">+91 7568543012</a>
                 </dd>
               </dl>
-              </div>
-        </div>
-        <div class="col-lg-6">
-            <div class="row nav-list">
-              <div class="col-lg-4 ">
-                  <div class="div_border">
-                      <br/>
-                <p class="ispoint"><a>About</a></p>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                  <div class="div_border">
-                      <br/>
-                <p class="ispoint"><a>Projects</a></p>
-                </div>
-              </div>
-              <!-- <div class="col-lg-2">
-              <div class="div_border">
-                <br/>
-                <p class="ispoint"><a>Blog</a></p>
-              </div>
-            </div> -->
-    
-              <div class="col-lg-4">
-                  <div class="div_border">
-                      <br/>
-                <p class="ispoint"><a>Contacts</a></p>
-                </div>
-              </div>
-              <!-- <div class="col-lg-2">
-                  <div class="div_border">
-                      <br/>
-                <p class="ispoint"><a>Pricing</a></p>
-                </div>
-              </div>
-     -->
             </div>
           </div>
+        </div>
       </div>
+      <div class='col-lg-6 col-md-12 col-sm-12 medium_device'>
+        <h5>Links</h5>
+        <!-- <div class="row"> -->
+          <hr/>
+          <!-- <div class="col-lg-6 col-md-12 col-sm-12"> -->
+            <div class="row nav-list">
+              <div class="col-lg-4 col-md-4 col-sm-6">
+                <div class="div_border">
+                  <br/>
+                    <p class="ispoint"><a>About</a></p>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                  <div class="div_border">
+                    <br/>
+                      <p class="ispoint"><a>Projects</a></p>
+                    </div>
+                  </div>
+                  <!-- <div class="col-lg-2">
+                    <div class="div_border">
+                      <br/>
+                      <p class="ispoint"><a>Blog</a></p>
+                    </div>
+                  </div> -->
+                  <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="div_border">
+                      <br/>
+                        <p class="ispoint"><a>Contacts</a></p>
+                      </div>
+                    </div>
+                    <!-- <div class="col-lg-2">
+                        <div class="div_border">
+                            <br/>
+                      <p class="ispoint"><a>Pricing</a></p>
+                      </div>
+                    </div>
+           -->
+                  <!-- </div> -->
+                <!-- </div> -->
+              </div>
+            </div>
+          </div>
 
 
-     
-  </div>
-  <!-- <div class="row no-gutters social-container">
+
+
+
+        </div>
+        <!-- <div class="row no-gutters social-container">
     <div class="col"><a class="social-inner"><span class="icon mdi mdi-facebook"></span><span class="ispoint">Facebook</span></a></div>
     <div class="col"><a class="social-inner"><span class="icon mdi mdi-instagram"></span><span class="ispoint">instagram</span></a></div>
     <div class="col"><a class="social-inner"><span class="icon mdi mdi-twitter"></span><span class="ispoint">twitter</span></a></div>
     <div class="col"><a class="social-inner"><span class="icon mdi mdi-youtube-play"></span><span class="ispoint">google</span></a></div>
   </div> -->
-  <hr/>
-  <div class="line_height">
-      <p>We are an award-winning creative agency, dedicated to the best result in web design, promotion, business consulting, and marketing.© 2019 Waves </p><br/>
-          <p>All Rights Reserved by Geppetto Software.</p>
-  </div>
-</footer>
-
-
-
- 
+        <hr/>
+          <div class="line_height">
+            <p>We are an award-winning creative agency, dedicated to the best
+              result in web design, promotion, business consulting, and
+              marketing.© 2019 Waves </p><br/>
+              <p>All Rights Reserved by Geppetto Software.</p>
+            </div>
+          </footer>
