remove the description in feature

--- a/application/clients/desktop/src/app/projects/projects.component.html
+++ b/application/clients/desktop/src/app/projects/projects.component.html
@@ -28,7 +28,7 @@
               <div title="Draft" class="sitecard-status sitecard-status-1"></div>
               <div class="sitecard-temp-name">{{proj.app_ui_template}}</div>
               <div class="sitecard-title">{{proj.name}}</div>
-              <div class="sitecard-desc">{{proj.description}}</div>
+              <!-- <div class="sitecard-desc">{{proj.description}}</div> -->
               <div class="sitecard__pub-info tp-size--s">
                 Created On: --
               </div>
@@ -163,7 +163,7 @@
               </div> -->
   
               <div class="col-md-6">
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <label for="description">{{ 'description' | i18next }}</label>
                   <textarea class="form-control" rows="1" id="description"
                     placeholder="{{'placeholder_description' | i18next}}" formControlName="description"
@@ -171,7 +171,7 @@
                   <div *ngIf="submitted && form_control.description.errors" class="invalid-feedback">
                     <div *ngIf="form_control.description.errors.required">{{'require_description' | i18next}}</div>
                   </div>
-                </div>
+                </div> -->
               </div>
             </div>
         </form>
