project list card issue fixes

--- a/application/clients/desktop/src/app/menu-builder/menu-builder.component.scss
+++ b/application/clients/desktop/src/app/menu-builder/menu-builder.component.scss
@@ -10,3 +10,11 @@
   .div_width{
     max-width:47%;
   }
+  .btn_color{
+    background-color: #033668;
+    border-bottom: 3px solid #033668; 
+  }
+  .btn_color:hover{
+    background-color: #39a521;
+    border-bottom: 3px solid #2d831a; 
+  }
