--- a/application/clients/desktop/src/app/project-component/project-component.component.scss
+++ b/application/clients/desktop/src/app/project-component/project-component.component.scss
@@ -180,3 +180,11 @@
 .bottom_padding{
   margin-bottom: 5%;
 }
+.btn_color{
+  background-color: #033668;
+  border-bottom: 3px solid #033668; 
+}
+.btn_color:hover{
+  background-color: #39a521;
+  border-bottom: 3px solid #2d831a; 
+}
