--- a/application/clients/desktop/src/styles.scss
+++ b/application/clients/desktop/src/styles.scss
@@ -80,3 +80,6 @@ app-projects .container .sitecard {
   height: 300px;
   margin-bottom: 10%;
 }
+.container .sitecard .sitecard-info {
+  height: 77% ;
+}
