--- a/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
+++ b/application/clients/desktop/src/app/menu-builder/menu-builder.component.html
@@ -57,7 +57,7 @@
       <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-6 col-xl-6">
           <div class="col-sm-4 col-md-4 col-lg-4 col-xl-4 mt-sm-3 mt-md-3 mt-lg-3 mt-xl-3">
-            <button class="btn btn-primary" (click)="updateMenuBuilder(description)">Update</button>
+            <button class="btn btn-primary btn_color" (click)="updateMenuBuilder(description)">Update</button>
           </div>
           <!-- <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <h6>OS Type</h6>
