--- a/application/clients/desktop/src/assets/scss/_geppetto.scss
+++ b/application/clients/desktop/src/assets/scss/_geppetto.scss
@@ -50,6 +50,21 @@ app-homepage div.center img {
   visibility: hidden
 }
 
+// Version 2, due to markup changes
+app-homepage >.div_height {
+  min-height: 67vh;
+}
+
+app-homepage div.bg_img.bg_img {
+  background-image: url(assets/img/skin/banner_home.svg);
+  background-position: bottom center;
+  background-repeat: no-repeat;
+  min-height: 360px;
+  background-size: 100% auto;
+  background-attachment: unset;
+}
+
+
 // ======= LOGIN ======= 
 app-login {
 	> mat-card.cardsize,
