feature details screen UI fixes

--- a/application/clients/desktop/src/app/available-connector/available-connector.component.html
+++ b/application/clients/desktop/src/app/available-connector/available-connector.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container top_align">
   <h1 class="flowTable" style="text-align: center;"> <u>{{ 'availableConnectors' | i18next }}</u> </h1>
   <div class="row row-button">
     <button mat-raised-button color="primary" (click)="onShowAPI()"> View/Update Connectors </button>
