--- a/application/clients/desktop/src/app/flow-manager/flow-manager.component.html
+++ b/application/clients/desktop/src/app/flow-manager/flow-manager.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid top_align">
   <h1 style="text-align: center;"> <u>{{ 'flows' | i18next }}</u> </h1>
   <div class="row row-button">
     <button mat-raised-button color="primary" (click)="openModal('create')">{{ 'create' | i18next }}</button>
