--- a/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.html
+++ b/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container component_top">
   <br />
   <br />
   <button class="addRowButton" (click)="onAddRow()">Add Row</button>
