--- a/application/clients/desktop/src/app/project-component/entitypopup-model/entitypop-up/entitypop-up.component.html
+++ b/application/clients/desktop/src/app/project-component/entitypopup-model/entitypop-up/entitypop-up.component.html
@@ -47,7 +47,7 @@
 </div>
 <br />
 <br />
-<div>
-    <button mat-raised-button color="warn" (click)="onNoClick()">Cancel</button>
+<div class="center_align">
+    <button class="right_align" mat-raised-button color="warn" (click)="onNoClick()">Cancel</button>
     <button mat-raised-button color="primary" [mat-dialog-close]="modelObject">Add</button>
 </div>
