--- a/application/clients/desktop/src/app/available-connector/available-connector.component.scss
+++ b/application/clients/desktop/src/app/available-connector/available-connector.component.scss
@@ -2,6 +2,7 @@
     float: right;
 }
 
+
 .row-button button,
 .row-button a {
     margin-right: 8px;
@@ -13,4 +14,8 @@
 
 .msgSpace {
     margin-left: 50px;
+}
+.top_align{
+    margin-top: 5%;
+    height:-webkit-fill-available;
 }
