--- a/application/clients/desktop/src/app/navigation/footer/footer.component.scss
+++ b/application/clients/desktop/src/app/navigation/footer/footer.component.scss
@@ -65,7 +65,7 @@ ul, ol {
   background: #2d3246;
   bottom: 0;
   width: 100%;
-  position: relative;
+  position: absolute;
   overflow-x: hidden;
 }
 
