--- a/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.scss
+++ b/application/clients/desktop/src/app/project-component/entity-field/entity-field.component.scss
@@ -1,7 +1,6 @@
 .addRowButton {
-    background-color: #4CAF50;
-    /* Green */
-    border: none;
+    background-color: #033668;
+    border-bottom: 3px solid #033668;
     color: white;
     // padding: 15px 32px;
     padding: 10px 30px;
@@ -18,6 +17,8 @@
 
 .addRowButton:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    background-color: #39a521;
+    border-bottom: 3px solid #2d831a; 
 }
 
 .bottomButtons {
