--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container component_top">
   <br />
   <h1 style="text-align: center;">Feature Details</h1>
   <br />
@@ -14,7 +14,34 @@
           <button class="createEntityButton" mat-raised-button color="primary" (click)="saveEntityModel()">Add
             Entity</button>
         </div>
-        <div class="row" style="margin: 0px;">
+
+
+        <div class="row" style="margin: 0px;"
+        *ngIf="featureEntityDetails.length> 0">
+        <div class="col-md-4" *ngFor="let entity of featureEntityDetails; let i = index">
+
+            <div class="row bottom_padding">
+                <div class="col-md-3">
+                    <img class="img_size" *ngIf="!entity.is_default" style="float: right; cursor: pointer;" (click)="editEntity(entity)"
+                        src="../../assets/img/feature4.png">
+                </div>
+                <div class="col-md-7">
+                    <h5> {{entity.name}}</h5>
+                    <p>{{entity.description}}</p>
+                    <button class="btn-space" mat-raised-button color="primary" (click)="editEntityField(entity)">Edit</button>
+                    <button mat-raised-button color="warn" [disabled]="entity.is_default"
+                    (click)="openDeleteModel(entity)">Delete</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4" class="col-md-4" *ngIf="featureEntityDetails.length === 0">
+            No Feature Available.
+        </div>
+    </div>
+
+
+        <!-- <div class="row" style="margin: 0px;">
           <div class="col-md-4" *ngFor="let entity of featureEntityDetails; let i = index">
             <div class="card mt-sm-3">
               <div class="card-header">
@@ -29,16 +56,13 @@
                 &nbsp;&nbsp;
                 <button mat-raised-button color="warn" [disabled]="entity.is_default"
                   (click)="openDeleteModel(entity)">Delete</button>
-                <!-- &nbsp;
-                <button mat-raised-button color="warn" [disabled]="entity.is_default"
-                  (click)="openDeleteModel(entity)">Delete</button> -->
               </div>
             </div>
           </div>
           <div class="col-md-4" *ngIf="featureEntityDetails.length === 0">
             No Entity Available.
           </div>
-        </div>
+        </div> -->
         <!-- <div class="float-right">
           <button class="btn btn-primary" (click)="openScreenModal()">Add Screens</button>
         </div> -->
@@ -68,7 +92,28 @@
 
           <button class="btn btn-success float-right" mat-raised-button (click)="GoToDesigner()">Add Screen</button>
         </mat-card-content>
-        <div class="row" style="margin: 0px;">
+
+        <div class="row" style="margin: 0px;padding-bottom: 20px;">
+          <div class="col-md-3 bottom_padding" *ngFor="let screen of screenDetails; let i = index">
+              <span class="screen_text">{{screen?.screenName}}</span>
+              <img src="../../assets/img/desktop.png" *ngIf="screen.screenType === 'desktop'"
+                  class="image" alt="Desktop">
+              <img src="../../assets/img/mobile.png" *ngIf="screen.screenType === 'mobile'" class="image"
+                  alt="Mobile">
+              <span class="fa fa-pencil-square-o fa-2x"
+                  (click)="editScreen(screen._id, screen.screenType)" aria-hidden="true"></span>
+              <span class="fa fa-trash-o fa-2x" (click)="deleteScreen(screen._id)"
+                  aria-hidden="true"></span>
+
+          </div>
+          <div class="col-md-4" *ngIf="screenDetails.length === 0">
+              No Screen Available.
+          </div>
+      </div>
+
+
+
+        <!-- <div class="row" style="margin: 0px;">
           <div class="col-md-4" *ngFor="let screen of screenDetails; let i = index">
             <div class="card">
               <div class="card-header">
@@ -88,7 +133,7 @@
         </div>
         <div class="col-md-4" *ngIf="screenDetails.length === 0">
           No Screen Available.
-        </div>
+        </div> -->
 
       </mat-expansion-panel>
       <mat-expansion-panel>
@@ -104,12 +149,7 @@
         </div>
         <div class="row">
           <div class="flowTable container mt-sm-3" *ngIf="flowInFeatureRowData.length>0">
-            <!-- <ag-grid-angular #agGrid style="width: 100%; height: 100%; margin-top: 50px;" id="myGrid"
-          class="ag-theme-balham" domLayout='autoHeight' [columnDefs]="columnDefs" [rowSelection]="rowSelection"
-          [rowData]="featureFlowRowData" [animateRows]="true" [suppressRowClickSelection]="true"
-          [defaultColDef]="defaultColDef" (rowSelected)=selectedFeatureFlow($event)
-          [frameworkComponents]="frameworkComponents" (gridReady)="onFlowGridReady($event)">
-        </ag-grid-angular> -->
+          
             <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
               [columnDefs]="flowInFeatureColumn" [rowData]="flowInFeatureRowData"
               [animateRows]="true" [defaultColDef]="flowInFeatureColDef" domLayout='autoHeight' [pagination]="true"
@@ -120,20 +160,6 @@
           </div>
         </div>
 
-        <!-- <div class="flowTable mt-sm-3" *ngIf="showFeatureFlowComp">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" [defaultColDef]="defaultColDef" domLayout='autoHeight'
-            (rowSelected)="selectFlowComponent()" [animateRows]="true" class="ag-theme-balham" [columnDefs]="fcompColDefs"
-            [rowData]="flow_comp" [rowSelection]="rowSelection" (gridReady)="onFCGridReady($event)">
-          </ag-grid-angular>
-        </div> -->
-
-        <!-- <div class="flowTable mt-sm-3" *ngIf="showFeatureFlowComponent">
-          <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham"
-            domLayout='autoHeight' [columnDefs]="columnFeatureDefs" [rowSelection]="rowSelection"
-            [rowData]="rowFlowCompData" [animateRows]="true" [defaultColDef]="defaultColDef"
-            (gridReady)="onFlowCompGridReady($event)">
-          </ag-grid-angular>
-        </div> -->
 
       </mat-expansion-panel>
     </mat-accordion>
@@ -144,7 +170,7 @@
 
 <div id="EventPopup" class="modal" tabindex="-1" role="dialog"
   [ngStyle]="{'top': '100px','display':displayFeatureFlowModal}">
-  <div class="modal-dialog modal-lg" role="dialog">
+  <div class="modal-dialog modal-lg flow_popup" role="dialog">
     <div class="modal-content">
       <!-- <div class="modal-header">
                 <h3>Select Flow for Feature</h3>
@@ -200,6 +226,27 @@
         <button type="button" class="btn btn-default" (click)="deleteEntity()">Confirm</button>
         &nbsp;
         <button type="button" class="btn btn-default" (click)="closeDeleteModel()">Cancel</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'top': '100px','display':deletescreenPopup}">
+  <div class="modal-dialog modal-sm" role="dialog">
+    <div class="modal-content">
+      <!-- <div class="modal-header">
+  <h6 class="modal-title">Delete</h6>
+  <button type="button" class="close">&times;</button>
+  </div> -->
+      <div class="delete modal-body">
+        <p>Please click confirm to delete this screen ? </p>
+      </div>
+      <div class="modal-footer" style="padding: 5px">
+        <button type="button" class="btn btn-default" (click)="deleteScreenPopup()">Confirm</button>
+        &nbsp;
+        <button type="button" class="btn btn-default" (click)="closedeleteScreenPopup()">Cancel</button>
       </div>
     </div>
 
