--- a/application/clients/desktop/src/app/projects/projects.component.scss
+++ b/application/clients/desktop/src/app/projects/projects.component.scss
@@ -162,7 +162,7 @@
     border-top: 1px solid rgba(0, 0, 0, .2);
     padding: 0;
     background: #383b42;
-    max-width: 32.333333%;
+    // max-width: 32.333333%;
 }
 
 .sitecard-action-c:first-child {
