--- a/application/clients/desktop/src/assets/scss/_geppetto.scss
+++ b/application/clients/desktop/src/assets/scss/_geppetto.scss
@@ -57,7 +57,7 @@ app-homepage >.div_height {
 
 app-homepage div.bg_img.bg_img {
   background-image: url(assets/img/skin/banner_home.svg);
-  background-position: bottom center;
+  background-position: center;
   background-repeat: no-repeat;
   min-height: 360px;
   background-size: 100% auto;
