Feature Details UI fix

--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.scss
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.scss
@@ -129,7 +129,7 @@
   top: 2%;
 }
 .top_align{
-  margin-bottom: 20%;
+  margin-bottom: 6%;
 }
 .img_size{
   width:80%;
@@ -246,4 +246,6 @@
     min-width: 50%;
     margin-top: 3%;
 }
-
+.component_top{
+  margin-bottom: 6%;
+}
