login and signup seed files changed

--- a/generator/services/seed/login/login.component.scss
+++ b/generator/services/seed/login/login.component.scss
@@ -3,9 +3,9 @@ body {
   font-size: 12px;
 }
 
-.main {
-  max-width: 320px;
-  margin: 0 auto;
+
+.form {
+  padding: 3% 6% 3% 6%;
 }
 
 .login-or {
