password field icon issue fixed

--- a/application/clients/desktop/src/app/login/login.component.scss
+++ b/application/clients/desktop/src/app/login/login.component.scss
@@ -84,6 +84,8 @@ a:hover {
   margin: -9px !important;
   margin-left: -31px !important;
   margin-top: 4px !important;
+  background: unset;
+  border: unset;
 }
 .modal-dialog {
   margin: 12.75rem auto;
