--- a/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
+++ b/application/clients/desktop/src/app/project-component/feature-details/feature-details.component.html
@@ -11,7 +11,7 @@
           <mat-panel-title> Entities </mat-panel-title>
         </mat-expansion-panel-header>
         <div style="margin-left: 64rem;">
-          <button class="createEntityButton" mat-raised-button color="primary" (click)="saveEntityModel()">Add
+          <button class="createEntityButton btn_color" mat-raised-button color="primary" (click)="saveEntityModel()">Add
             Entity</button>
         </div>
 
@@ -90,7 +90,7 @@
 
         <mat-card-content>
 
-          <button class="btn btn-success float-right" mat-raised-button (click)="GoToDesigner()">Add Screen</button>
+          <button class="btn btn-success float-right btn_color" mat-raised-button (click)="GoToDesigner()">Add Screen</button>
         </mat-card-content>
 
         <div class="row" style="margin: 0px;padding-bottom: 20px;">
@@ -142,7 +142,7 @@
         <div class="row">
           <div class="col-md-6"></div>
           <div class="col-md-6">
-            <button class="btn btn-info ml-sm-3 float-right" (click)="openFeatureFlowDialog(feature_id)">Add
+            <button class="btn btn-info ml-sm-3 float-right btn_color" (click)="openFeatureFlowDialog(feature_id)">Add
               Flows</button>
           </div>
         </div>
