footer changes with mobile responsiveness

--- a/application/clients/desktop/src/app/available-connector/available-connector.component.scss
+++ b/application/clients/desktop/src/app/available-connector/available-connector.component.scss
@@ -17,5 +17,21 @@
 }
 .top_align{
     margin-top: 5%;
-    height:-webkit-fill-available;
+  margin-bottom: 6%;
+}
+.modal-dialog {
+    margin: 7.75rem auto;
+}
+.button-create{
+    color:white;
+}
+.button-close{
+    color:white;
+}
+
+.modal-footer {
+    justify-content: center;
+}
+.modal-footer {
+    border-top: unset;
 }
