--- a/application/clients/desktop/src/app/navigation/footer/footer.component.html
+++ b/application/clients/desktop/src/app/navigation/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<footer class="section footer-classic context-dark bg-image mainDiv">
+<!-- <footer class="section footer-classic context-dark bg-image mainDiv">
   <div class="container_new">
     <div class="row top_align">
       <div class='col-lg-6 div_right_border col-md-12 col-sm-12 medium_device'>
@@ -36,9 +36,9 @@
       </div>
       <div class='col-lg-6 col-md-12 col-sm-12 medium_device'>
         <h5>Links</h5>
-        <!-- <div class="row"> -->
+       
           <hr/>
-          <!-- <div class="col-lg-6 col-md-12 col-sm-12"> -->
+         
             <div class="row nav-list">
               <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="div_border">
@@ -52,42 +52,19 @@
                       <p class="ispoint"><a>Projects</a></p>
                     </div>
                   </div>
-                  <!-- <div class="col-lg-2">
-                    <div class="div_border">
-                      <br/>
-                      <p class="ispoint"><a>Blog</a></p>
-                    </div>
-                  </div> -->
+                 
                   <div class="col-lg-4 col-md-4 col-sm-6">
                     <div class="div_border">
                       <br/>
                         <p class="ispoint"><a>Contacts</a></p>
                       </div>
                     </div>
-                    <!-- <div class="col-lg-2">
-                        <div class="div_border">
-                            <br/>
-                      <p class="ispoint"><a>Pricing</a></p>
-                      </div>
-                    </div>
-           -->
-                  <!-- </div> -->
-                <!-- </div> -->
+                   
               </div>
             </div>
           </div>
 
-
-
-
-
         </div>
-        <!-- <div class="row no-gutters social-container">
-    <div class="col"><a class="social-inner"><span class="icon mdi mdi-facebook"></span><span class="ispoint">Facebook</span></a></div>
-    <div class="col"><a class="social-inner"><span class="icon mdi mdi-instagram"></span><span class="ispoint">instagram</span></a></div>
-    <div class="col"><a class="social-inner"><span class="icon mdi mdi-twitter"></span><span class="ispoint">twitter</span></a></div>
-    <div class="col"><a class="social-inner"><span class="icon mdi mdi-youtube-play"></span><span class="ispoint">google</span></a></div>
-  </div> -->
         <hr/>
           <div class="line_height">
             <p>We are an award-winning creative agency, dedicated to the best
@@ -95,4 +72,43 @@
               marketing.© 2019 Waves </p><br/>
               <p>All Rights Reserved by Geppetto Software.</p>
             </div>
-          </footer>
+          </footer> -->
+<footer class="section footer-classic context-dark bg-image mainDiv">
+  <div class="container">
+    <div class="row top_row">
+      <div class="col mobile_view">
+        <!-- Geppetto -->
+        <div>
+          <img class="footer_img" src="/assets/img/skin/logo-geppetto.svg" />
+        </div>
+        <div>
+          <p>We are an award-winning creative agency, dedicated to the best
+            result in web design, promotion, business consulting, and
+            marketing.© 2019 Waves All Rights Reserved by Geppetto Software.</p>
+        </div>
+      </div>
+      <div class="col">
+        <div class="row">
+          <div class="col m_address">
+            <h5>Contacts Us</h5>
+            <div>
+              <dd> <b>Address: </b>798 South Park Avenue, Orlando</dd>
+              <dd><b>Email: </b><a href="mailto:#">dan.castillo@geppettosoftware.com</a></dd>
+              <dd><b>Phone: </b><a href="tel:#">+91 7568543012</a></dd>
+            </div>
+          </div>
+          <div class="col">
+            <h5>Links:</h5>
+            <div>
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contacts</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
