--- a/application/clients/desktop/src/app/available-connector/available-connector.component.html
+++ b/application/clients/desktop/src/app/available-connector/available-connector.component.html
@@ -96,12 +96,12 @@
       </div>
       <div class="modal-footer">
         <div class="form-group" *ngIf="selectedAvaConnector.length === 0">
-          <button type="button" class="btn button-create" (click)="createConnector()">{{ 'create' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="closeModal()"> Close</button>
+          <button type="button" class="btn button-create ok_btn" (click)="createConnector()">{{ 'create' | i18next }}</button>
+          <button type="button" class="btn button-close delete_btn" (click)="closeModal()"> Close</button>
         </div>
         <div class="form-group" *ngIf="selectedAvaConnector.length > 0">
-          <button type="button" class="btn button-create" (click)="updateConnector()">{{ 'update' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="closeModal()"> Close</button>
+          <button type="button" class="btn button-create ok_btn" (click)="updateConnector()">{{ 'update' | i18next }}</button>
+          <button type="button" class="btn button-close delete_btn" (click)="closeModal()"> Close</button>
         </div>
       </div>
     </div>
