--- a/application/clients/desktop/src/app/config-manager/config-manager.component.html
+++ b/application/clients/desktop/src/app/config-manager/config-manager.component.html
@@ -101,12 +101,12 @@
         </div>
         <div class="modal-footer">
           <div class="form-group" *ngIf="checkUpdate">
-            <button type="button" class="btn button-create" (click)="createConfig()">{{ 'create' | i18next }}</button>
-            <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
+            <button type="button" class="btn button-create ok_btn" (click)="createConfig()">{{ 'create' | i18next }}</button>
+            <button type="button" class="btn button-close delete_btn" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
           </div>
           <div class="form-group" *ngIf="!checkUpdate">
-            <button type="button" class="btn button-create" (click)="updateConfig()">{{ 'update' | i18next }}</button>
-            <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
+            <button type="button" class="btn button-create ok_btn" (click)="updateConfig()">{{ 'update' | i18next }}</button>
+            <button type="button" class="btn button-close delete_btn" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
           </div>
         </div>
       </div>
