--- a/application/clients/desktop/src/app/config-manager/config-manager.component.scss
+++ b/application/clients/desktop/src/app/config-manager/config-manager.component.scss
@@ -13,4 +13,24 @@
 .top_align{
     margin-top: 5%;
     height:auto;
+    margin-bottom: 6%;
+}
+
+.modal-dialog {
+    margin: 9.75rem auto;
+}
+.button-create{
+    color:white;
+}
+.button-close{
+    color:white;
+}
+
+element.style {
+}
+.modal-footer {
+    justify-content: center;
+}
+.modal-footer {
+    border-top: unset;
 }
