--- a/application/clients/desktop/src/app/flow-manager/flow-manager.component.html
+++ b/application/clients/desktop/src/app/flow-manager/flow-manager.component.html
@@ -68,12 +68,12 @@
       </div>
       <div class="modal-footer">
         <div class="form-group" *ngIf="checkUpdate">
-          <button type="button" class="btn button-create" (click)="createFlowModel()">{{ 'create' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-create ok_btn" (click)="createFlowModel()">{{ 'create' | i18next }}</button>
+          <button type="button" class="btn button-close delete_btn" (click)="onCloseHandled()">{{ 'cancel' | i18next }}</button>
         </div>
         <div class="form-group" *ngIf="!checkUpdate">
-          <button type="button" class="btn button-create" (click)="updateFlowModel()">{{ 'update' | i18next }}</button>
-          <button type="button" class="btn button-close" (click)="onCloseHandledForUpdate()">{{ 'cancel' | i18next }}</button>
+          <button type="button" class="btn button-create ok_btn" (click)="updateFlowModel()">{{ 'update' | i18next }}</button>
+          <button type="button" class="btn button-close delete_btn" (click)="onCloseHandledForUpdate()">{{ 'cancel' | i18next }}</button>
         </div>
       </div>
     </div>
