--- a/application/clients/desktop/src/app/user/user.component.html
+++ b/application/clients/desktop/src/app/user/user.component.html
@@ -1,5 +1,5 @@
-<div style="height: 80%; padding-top: 10px; box-sizing: border-box;">
-  <ag-grid-angular #agGrid style="width: 100%; height: 100%;" id="myGrid" class="ag-theme-balham" [columnDefs]="columnDefs"
+<div class="top_align">
+  <ag-grid-angular #agGrid id="myGrid" class="ag-theme-balham table_align" [columnDefs]="columnDefs"
   [rowData]="rowData" [defaultColDef]="defaultColDef" [animateRows]="true" (gridReady)="onGridReady($event)" domLayout='autoHeight'
   [frameworkComponents]="frameworkComponents"></ag-grid-angular>
 </div>
